sample values file update

--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -1,4 +1,3 @@
-namespace: default
 storage-create:
   azure_service_principal_name: https://XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
   azure_service_principal_key: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX=
@@ -6,7 +5,8 @@ storage-create:
   azure_storage_subscription: <Azure-Subscription-ID>
   azure_storage_resource_group: <Azure-Resource-Group-Name>
   azure_storage_account_name:  <Azure-Storage-Account-Name>
+  azure_file_share_name: <Azure-Storage-Fileshare-Name>
   azure_storage_account_location: eastus
 
 jenkins:
-  azurefileshare: <file-share-name>
+  azurefileshare: <Azure-Storage-Fileshare-Name>
