allow fileshare to be passed in to provisioning

--- a/helm-charts/azure-storage/templates/storage-create.secret.yaml
+++ b/helm-charts/azure-storage/templates/storage-create.secret.yaml
@@ -10,3 +10,4 @@ data:
   azure_storage_subscription: {{ index .Values "storage-create" "azure_storage_subscription" | b64enc }}
   azure_storage_resource_group: {{ index .Values "storage-create" "azure_storage_resource_group" | b64enc }}
   azure_storage_account_name: {{ index .Values "storage-create" "azure_storage_account_name" | b64enc }}
+  azure_file_share_name: {{ index .Values "storage-create" "azure_file_share_name" | b64enc }}
