--- a/helm-charts/azure-storage/templates/storage-rbac.yaml
+++ b/helm-charts/azure-storage/templates/storage-rbac.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: storage-create
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: secret-creator
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups: ["*"]
   resources: ["secrets"]
@@ -20,11 +20,11 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: secret-creator
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: storage-create
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: secret-creator
@@ -35,7 +35,7 @@ roleRef:
 # apiVersion: rbac.authorization.k8s.io/v1
 # metadata:
 #   name: secret-creator
-#   namespace: {{ .Values.namespace }}
+#   namespace: {{ .Release.Namespace }}
 # subjects:
 # - kind: ServiceAccount
 #   name: storage-create
