update rbac rules to allow secret update

--- a/helm-charts/azure-storage/templates/storage-rbac.yaml
+++ b/helm-charts/azure-storage/templates/storage-rbac.yaml
@@ -12,7 +12,7 @@ metadata:
 rules:
 - apiGroups: ["*"]
   resources: ["secrets"]
-  verbs: ["create"]
+  verbs: ["create", "update", "patch", "put"]
 
 
 ---
